edit UserProfile weight to int, edit UserProfileController´(deleted all methods) added addUserProfile method, edit UserProfileService addUserProfile method, added ControllerExceptionHandler but not working yet :)
