# Spring/src/main/java/de/sep/calocalendar/controller/UserProfileController.java
@@ -1,44 +1,20 @@
 package de.sep.calocalendar.controller;
 
+import de.sep.calocalendar.api.UserProfileApiDelegate;
 import de.sep.calocalendar.model.UserProfileModel;
 import de.sep.calocalendar.service.UserProfileService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.stereotype.Controller;
 
-import java.util.List;
+@Controller
+public class UserProfileController implements UserProfileApiDelegate {
 
-@RestController
-@RequestMapping("/api/userprofiles")
-public class UserProfileController {
+    @Autowired
+    private UserProfileService service;
 
-   @Autowired
-    private UserProfileService userProfileService;
-
-    @GetMapping
-    public ResponseEntity<List<UserProfileModel>> getAllUserProfiles() {
-        return ResponseEntity.of(userProfileService.getAllUserProfiles());
-    }
-
-    @GetMapping("/{id}")
-    public ResponseEntity<UserProfileModel> getUserProfileById(@PathVariable Long id) {
-        return ResponseEntity.of(userProfileService.getUserProfileById(id));
-    }
-
-    @PostMapping
-    public ResponseEntity<Long> createUserProfile(@RequestBody UserProfileModel userProfileModel) {
-        return ResponseEntity.of(userProfileService.createUserProfile(userProfileModel));
-    }
-
-    @PutMapping("/{id}")
-    public ResponseEntity<UserProfileModel> updateUserProfile(@PathVariable Long id, @RequestBody UserProfileModel userProfileModel) {
-        return ResponseEntity.of(userProfileService.updateUserProfile(id, userProfileModel));
-    }
-
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteUserProfile(@PathVariable Long id) {
-        userProfileService.deleteUserProfile(id);
-        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+    @Override
+    public ResponseEntity<Long> addUserProfile(UserProfileModel model) {
+        return ResponseEntity.of(service.addUserProfile(model));
     }
 }
