# Spring/src/main/resources/api.yaml
@@ -5,10 +5,42 @@ info:
   version: 1.0.0
 
 servers:
-  - url: http://localhost:8080/swagger-ui/index.html#/
+  - url: http://localhost:8080
+    #http://localhost:8080/swagger-ui/index.html#/
+    #link für swagger-ui
+
+tags:
+  - name: UserProfile
+  - name: GroceryItem
+  - name: Meal
 
 paths:
-  /users:
+  /userProfile:
+    post:
+      tags:
+        - UserProfile
+      operationId: addUserProfile
+      requestBody:
+        description: Add a user to database
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserProfileModel'
+        required: true
+      responses:
+        '200':
+          description: UserProfile created successfully
+          content:
+            application/json:
+              schema:
+                type: integer
+                format: int64
+        '400':
+          description: invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     get:
       summary: Get all users
       operationId: getUsers
@@ -21,25 +53,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/UserProfileModel'
-    post:
-      summary: Create a new user
-      operationId: createUser
-      requestBody:
-        description: User to create
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserProfileModel'
-      responses:
-        '201':
-          description: User created successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserProfileModel'
 
-  /users/{id}:
+  /userProfile/{id}:
     get:
       summary: Get a user by ID
       operationId: getUserById
@@ -108,18 +123,22 @@ components:
         id:
           type: integer
           format: int64
-          readOnly: true
+          example: 1
         userName:
           type: string
+          example: MaxMustermann
         gender:
           type: integer
+          example: 1
         age:
           type: integer
+          example: 25
         weight:
-          type: number
-          format: double
+          type: integer
+          example: 75000
         levelOfPhysicalActivity:
           type: integer
+          example: 2
       required:
         - userName
         - gender
@@ -132,19 +151,36 @@ components:
         id:
           type: integer
           format: int64
-          readOnly: true
+          example: 1
         name:
           type: string
+          example: Reis
         calories:
           type: integer
+          example: 100
         weight:
           type: integer
+          example: 250
     MealModel:
       type: object
       properties:
         id:
           type: integer
           format: int64
-          readOnly: true
+          example: 1
         mealName:
           type: string
+          example: Pizza
+    Error:
+      type: object
+      properties:
+        errorMessages:
+          type: array
+          items:
+            type: string
+          example: [ "Error message 1", "Error message 2" ]
+          description: Fehlermeldungen
+        status:
+          type: string
+          description: Ausgeschriebener HTTP Status
+          example: "Bad Request"
